--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,59 @@
 
 .vscode/
 localisation/PB_News_Events_l_english.yml
+sound/Conformed Files/(1 2) Homeworld Deserts of Kharak Baserunner Dialogue   Chatter   Radio (Coalition) 48000 1.pkf
+sound/Conformed Files/(1 2) Homeworld Deserts of Kharak Baserunner Dialogue   Chatter   Radio (Coalition) 48000 1.wav
+sound/Conformed Files/(1 2) Homeworld Deserts of Kharak Baserunner Dialogue   Chatter   Radio (Coalition) 48000 2.pkf
+sound/Conformed Files/(1 2) Homeworld Deserts of Kharak Baserunner Dialogue   Chatter   Radio (Coalition) 48000 2.wav
+sound/Conformed Files/(1 2) Homeworld Deserts of Kharak Baserunner Dialogue   Chatter   Radio (Coalition) 48000 3.pkf
+sound/Conformed Files/(1 2) Homeworld Deserts of Kharak Baserunner Dialogue   Chatter   Radio (Coalition) 48000 3.wav
+sound/Conformed Files/Battlefield 1 - British  Intense Battle  Responses 48000 1.pkf
+sound/Conformed Files/Battlefield 1 - British  Intense Battle  Responses 48000 1.wav
+sound/Conformed Files/Battlefield 1 - English Voices 48000 1.pkf
+sound/Conformed Files/Battlefield 1 - English Voices 48000 1.wav
+sound/Conformed Files/Battlefield 1 - English Voices 48000 10.pkf
+sound/Conformed Files/Battlefield 1 - English Voices 48000 10.wav
+sound/Conformed Files/Battlefield 1 - English Voices 48000 11.pkf
+sound/Conformed Files/Battlefield 1 - English Voices 48000 11.wav
+sound/Conformed Files/Battlefield 1 - English Voices 48000 12.pkf
+sound/Conformed Files/Battlefield 1 - English Voices 48000 12.wav
+sound/Conformed Files/Battlefield 1 - English Voices 48000 13.pkf
+sound/Conformed Files/Battlefield 1 - English Voices 48000 13.wav
+sound/Conformed Files/Battlefield 1 - English Voices 48000 14.pkf
+sound/Conformed Files/Battlefield 1 - English Voices 48000 14.wav
+sound/Conformed Files/Battlefield 1 - English Voices 48000 15.pkf
+sound/Conformed Files/Battlefield 1 - English Voices 48000 15.wav
+sound/Conformed Files/Battlefield 1 - English Voices 48000 2.pkf
+sound/Conformed Files/Battlefield 1 - English Voices 48000 2.wav
+sound/Conformed Files/Battlefield 1 - English Voices 48000 3.pkf
+sound/Conformed Files/Battlefield 1 - English Voices 48000 3.wav
+sound/Conformed Files/Battlefield 1 - English Voices 48000 4.pkf
+sound/Conformed Files/Battlefield 1 - English Voices 48000 4.wav
+sound/Conformed Files/Battlefield 1 - English Voices 48000 5.pkf
+sound/Conformed Files/Battlefield 1 - English Voices 48000 5.wav
+sound/Conformed Files/Battlefield 1 - English Voices 48000 6.pkf
+sound/Conformed Files/Battlefield 1 - English Voices 48000 6.wav
+sound/Conformed Files/Battlefield 1 - English Voices 48000 7.pkf
+sound/Conformed Files/Battlefield 1 - English Voices 48000 7.wav
+sound/Conformed Files/Battlefield 1 - English Voices 48000 8.pkf
+sound/Conformed Files/Battlefield 1 - English Voices 48000 8.wav
+sound/Conformed Files/Battlefield 1 - English Voices 48000 9.pkf
+sound/Conformed Files/Battlefield 1 - English Voices 48000 9.wav
+sound/Conformed Files/Battlefield 1 - French  Intense Battle  Responses 48000 1.pkf
+sound/Conformed Files/Battlefield 1 - French  Intense Battle  Responses 48000 1.wav
+sound/Conformed Files/Battlefield 1 Voices - This weather sucks - English Italian French Russian German 48000 1.pkf
+sound/Conformed Files/Battlefield 1 Voices - This weather sucks - English Italian French Russian German 48000 1.wav
+sound/Conformed Files/Call of Duty Modern Warfare - S.A.S. Voice Lines 48000 1.pkf
+sound/Conformed Files/Call of Duty Modern Warfare - S.A.S. Voice Lines 48000 1.wav
+sound/Conformed Files/Command & Conquer Generals - Zero Hour - ALL General Quotes - Townes 48000 1.pkf
+sound/Conformed Files/Command & Conquer Generals - Zero Hour - ALL General Quotes - Townes 48000 1.wav
+sound/Conformed Files/Kane's Wrath - Rifle Squad quotes 48000 1.pkf
+sound/Conformed Files/Kane's Wrath - Rifle Squad quotes 48000 1.wav
+sound/Conformed Files/Kane's Wrath - Rifle Squad quotes 48000 2.pkf
+sound/Conformed Files/Kane's Wrath - Rifle Squad quotes 48000 2.wav
+sound/Conformed Files/Kane´s Wrath - Missile Squad quotes 48000 1.pkf
+sound/Conformed Files/Kane´s Wrath - Missile Squad quotes 48000 1.wav
+sound/Conformed Files/Max0r's Metal Gear Rising parody, but only the Sundowner part 48000 1.pkf
+sound/Conformed Files/Max0r's Metal Gear Rising parody, but only the Sundowner part 48000 1.wav
+sound/Conformed Files/What Do You Mean Guns are Dangerous 48000 1.pkf
+sound/Conformed Files/What Do You Mean Guns are Dangerous 48000 1.wav
